--- a/index.html
+++ b/index.html
@@ -3,19 +3,7 @@
   <head>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <title>Socket.IO chat</title>
-    <style>
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
-
-      #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
-      #name, #message { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem .8rem .8rem 2rem; margin: 0.25rem; }
-      #message { flex-grow: 3; border-radius: .8rem 2rem 2rem .8rem; margin-left: 0 }
-      #name:focus, #message:focus { outline: none; }
-      #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
-
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages > li { padding: 0.5rem 1rem; }
-      #messages > li:nth-child(odd) { background: #efefef; }
-    </style>
+    <link rel="stylesheet" href="styles/simplechat.css">
   </head>
   <body>
     <ul id="messages"></ul>
@@ -28,5 +16,5 @@
 
    <script src="/socket.io/socket.io.js"></script>
    <script src="scripts/SimpleChat.js"></script>
-  </body>
+   </body>
 </html>
